Got rid of THashSet usages